# CRM_system

./: .env  .env.example  CRM_system.postman_collection.json  CRM_system.postman_collection1.2.json  CRM_system.postman_collection_last2.json  CRM_system.postman_collection_v3.json  CRM_system.postman_collection_v4.1.json  CRM_system.postman_collection_v4.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
backend/: manage.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/comments/: models.py  serializers.py  urls.py  views.py
backend/apps/comments/migrations/: 0001_initial.py
backend/apps/groups/: models.py  serializers.py  urls.py  views.py
backend/apps/groups/migrations/: 0001_initial.py
backend/apps/orders/: apps.py  filters.py  models.py  regex.py  serializers.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py  0002_ordersmodel_group_ordersmodel_manager.py  (+5 more)
backend/apps/student_application/: apps.py  models.py
backend/apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/configs/extra_conf/: __init__.py  celery_conf.py  jwt_conf.py  rest_conf.py
backend/core/: pagination.py
backend/core/enums/: action_token_enum.py
backend/core/handlers/: error_handler.py
backend/core/permissions/: is_manager_permission.py  is_order_owner.py  is_superuser_permission.py
backend/core/services/: email_service.py  jwt_service.py
backend/templates/: activate.html  recovery.html
configs/: settings.py
(+5 files in other folders)
