[tool.poetry]
name = "crm-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"
django-dotenv = "^1.4.2"
django-filter = "^24.3"
mysqlclient = "^2.2.7"
djangorestframework-simplejwt = "^5.4.0"
drf-yasg = "^1.21.8"
celery = "^5.4.0"
redis = "^5.2.1"
django-celery-results = "^2.5.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
